@@ -1,13 +1,8 @@
-* avva: In particular, he pointed out TCP_DEFER_ACCEPT which makes the
-  listening socket signal readiness for accept() only after some data
-  is actually sent from the other side. It makes sense in cases of
-  memcached, but probably won't really matter.
-
 * slab class reassignment still buggy and can crash.  once that's
   stable, server should re-assign pages every 60 seconds or so
-  to keep all classes roughly equal.
+  to keep all classes roughly equal.  [Update: fixed now?, but 
+  not heavily tested.  Future: make slab classes, with per-class
+  cleaners functions.]
 
 * calendar queue for early expirations of items, so they don't push
   out other objects with infinite expirations.
-
-* drop root on start, if root. to what? nobody/nogroup? configurable?
